--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-This is my home page for CRP 558
+<!DOCTYPE html>
+<html>
+<head>
+<title>CRP 558</title>
+</head>
+<body>
+
+<h1>Emma Bravard</h1>
+<p>This is my class home page for CRP 558 at Iowa State University.</p>
+
+</body>
+</html>
