--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -1,1 +1,12 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+<title>Exercise 1</title>
+</head>
+<body>
+
+<h1>About me</h1>
+  <p>Hello everyone! <br>My name is <strong>Emma Bravard</strong> and I am Master's student pursuing my degree in <b>Sustainable Agriculture</b>. I look forward to learning more about web mapping and coding in this class.</p>
+
+</body>
+</html>
