--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>About me</h1>
-  <p>Hello everyone! <br>My name is <strong>Emma Bravard</strong> and I am Master's student pursuing my degree in <b>Sustainable Agriculture</b>. I look forward to learning more about web mapping and coding in this class.</p>
+  <p>Hello everyone! <br>My name is <strong>Emma Bravard</strong> and I am Master's student pursuing my degree in <b>Sustainable Agriculture</b> and completing the GIS Certificate.  I do not have experience with HTML or JavaScript, however, I am well-versed in using GIS.  I have taken several GIS courses here at Iowa State in both the NREM & ABE departments and completed CRP 551 this past summer.  Additionally, I have a small amount of experience with coding using Arduino, but my coding skills are rudimentary.  I am looking forward to learning more about coding in different programs and further improving my understanding of GIS.</p>
 
 </body>
 </html>
