--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Exercise 2</title>
+</head>
+<body>
 
+<h1>A Look at St. John</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
