added heading with style and paragraph text

--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>A Look at St. John</h1>
-<p>My first paragraph.</p>
+<h1 style="color: aquamarine">A Look at St. John</h1>
+<p>The page contains a few different maps of St. John. St. John is located in the U.S. Virgin Islands and is easily my favorite place on planet Earth. <br>Explore the maps below to see more of St. John!</p>
 
 </body>
 </html>
