--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
 <head>
 <title>CRP 558</title>
 </head>
+    <div class="navbar">
+  <a href="https://ebravard.github.io/CRP558/">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Assignments
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Assignment 1</a>
+    </div>
+  <div class="dropdown">
+    <button class="dropbtn">Exercises
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://ebravard.github.io/CRP558/exercise1/">Exercise 1</a>
+      <a href="https://ebravard.github.io/CRP558/exercise2/">Exercise 2</a>
+      <a href="https://github.com/ebravard/CRP558/blob/master/exercise3/iowa_dams.geojson">Exercise 3</a>
+      <a href="https://ebravard.github.io/CRP558/exercise4/#7/42.496/-93.395">Exercise 4</a>
+    </div>
+  </div>
+</div>
 <body>
 
 <h1>Emma Bravard</h1>
