--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
 </style>
     
     <div class="navbar">
