--- a/index.html
+++ b/index.html
@@ -7,117 +7,19 @@
     <div class="navbar">
   <a href="https://ebravard.github.io/CRP558/">Home</a>
   <div class="dropdown">
-    <button class="dropbtn">Assignments
+    <button class="dropbtn">Activities
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://ebravard.github.io/CRP558/">Assignment 1</a>
-    </div>
-  <div class="dropdown2">
-    <button class="dropbtn2">Exercises
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content2">
       <a href="https://ebravard.github.io/CRP558/exercise1/">Exercise 1</a>
       <a href="https://ebravard.github.io/CRP558/exercise2/">Exercise 2</a>
       <a href="https://github.com/ebravard/CRP558/blob/master/exercise3/iowa_dams.geojson">Exercise 3</a>
       <a href="https://ebravard.github.io/CRP558/exercise4/#7/42.496/-93.395">Exercise 4</a>
+      <a href="https://ebravard.github.io/CRP558/exercise4/#7/42.496/-93.395">Assignment 1</a>
     </div>
   </div>
 </div>
-    <style>
-        .navbar {
-  overflow: hidden;
-  background-color: #333;
-  font-family: Arial;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-  
-.dropdown2 {
-  float: left;
-  overflow: hidden;
-}        
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0; 
-}
-.dropdown2 .dropbtn2 {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0; 
-}        
-.navbar a:hover, .dropdown:hover .dropbtn, .dropdown2:hover .dropbtn2 {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-.dropdown-content2 {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown-content2 a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-.dropdown-content2 a:hover {
-  background-color: #ddd;
-}
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-.dropdown2:hover .dropdown-content2 {
-  display: block;
-}        
+    <style>       
 body { padding-top: 70px; }
 </style>
         
