--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -24,7 +24,8 @@
     overflow: hidden;
     background-color: #333;
     font-family: Arial;
-    padding-bottom: 50px; 
+    padding-bottom: 50px;
+    height: 100px;
 }
         
 .navbar a {
