--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise2/">Exercise 2</a>
       <a href="https://github.com/ebravard/CRP558/blob/master/exercise3/iowa_dams.geojson">Exercise 3</a>
       <a href="https://ebravard.github.io/CRP558/exercise4/#7/42.496/-93.395">Exercise 4</a>
-      <a href="https://ebravard.github.io/CRP558/exercise4/#7/42.496/-93.395">Assignment 1</a>
+      <a href="https://ebravard.github.io/CRP558/assignment1/">Assignment 1</a>
     </div>
   </div>
 </div>
