--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -92,26 +92,42 @@ Click me to display Date and Time.</button>
 
 <script>
 var person = ["Celia", "Emma", "Jared"];
-document.getElementById("demo2").innerHTML = cars;
+document.getElementById("demo2").innerHTML = person;
 </script>
     
 var person = [
 {
 name: "Celia",
-age: "26",
+age: 26,
 order: "first-born"
 },
 {
 name: "Emma", 
-age: "23",
+age: 23,
 order: "second-born" 
 },
 {
 name: "Jared", 
-age: "21",
+age: 21,
 order: "last-born" 
 }
 ];
+
+ <p id="demo3"></p>
+
+<script>
+var person, text, pLen, i;
+person = ["Celia", "Emma", "Jared"];
+pLen = person.length;
+
+text = "<ul>";
+for (i = 0; i < pLen; i++) {
+  text += "<li>" + person[i] + "</li>";
+}
+text += "</ul>";
+
+document.getElementById("demo3").innerHTML = text;
+</script>
 
 </body>
 </html> 
