--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -97,19 +97,22 @@ document.getElementById("demo2").innerHTML = person;
     
 var person = [
 {
-name: "Celia",
+firstName: "Celia",
+lastName: "Bravard",
 age: 26,
 fullName: function() {
     return this.firstName + " " + this.lastName;}
 },
 {
-name: "Emma", 
+firstName: "Emma",
+lastName: "Bravard",
 age: 23,
 fullName: function() {
     return this.firstName + " " + this.lastName;}
 },
 {
-name: "Jared", 
+firstName: "Jared",
+lastName: "Bravard",
 age: 21,
 fullName: function() {
     return this.firstName + " " + this.lastName;} 
