--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta name="description" content="LA/CRP 458/558 Leaflet starter file - 2020">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Getting Started with Leaflet</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+        integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
+
+    <style>
+        #map {
+            width: 800px;
+            height: 500px;
+        }
+        
+    </style>
+
+</head>
+
+<body>
+    <div id='mapid'></div>
+    
+    <br>Pan to <a href="javascript:coralBay()">Coral Bay, Saint John</a><br>
+
+    <a href="javascript:zoomOut()">Zoom out to level 5</a><br>
+
+    <button id="catherinebergBtn">Explore Catherineberg Ruins</button>
+
+
+    <script>
+        var map = L.map('mapid').setView([42.0, -93.634], 13);
+
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+            maxZoom: 18,
+            id: 'mapbox/streets-v11',
+            // This is a unique access token, you must register for your own from https://account.mapbox.com/access-tokens/
+            accessToken: 'pk.eyJ1IjoiZWJyYXZhcmQiLCJhIjoiY2s2c2RqbTZ1MDF4djNlcjRzcnE5YWF6MCJ9.h9xSTFWCxt-1PCf9oYGaMQ'
+        }).addTo(map);
+
+        L.marker([18.333333, -64.733333]).addTo(map)
+            .bindPopup("My favorite island")
+            .openPopup();
+   
+  //----------Adding multiple markers for places----------
+
+        //an array of places
+        var places = [
+            [18.35, -64.716667, "Coral Bay, Saint John"],
+            [18.331343, -64.7937497, "Cruz Bay, Saint John"],
+            [18.346667, -64.761389, "Catherineberg Ruins"]
+        ];
+
+        //loop through the array and add a marker for each
+        for (var i = 0; i < places.length; i++) {
+            marker = new L.marker([places[i][0], places[i][1]])
+                .bindPopup(places[i][2])
+                .addTo(map);
+        }
+
+
+        //----------Links below the Map----------
+
+        //Pan to Coral Bay
+        function coralBay() {
+            map.panTo(new L.LatLng(18.35, -64.716667));
+        }
+
+        //set Zoom
+        function zoomOut() {
+            map.setZoom(5);
+        };
+
+
+        //add an event listener for a click event on the button
+        document.getElementById("catherinebergBtn").addEventListener("click", catherinebergRuins);
+
+        //Catherineberg Ruins function
+        function catherinebergRuins() {
+            map.setView(new L.LatLng(18.346667, -64.761389), 13);
+        };    
+    </script>
+
+</body>
+</html>
