--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -14,7 +14,7 @@
         crossorigin=""></script>
 
     <style>
-        #map {
+        #mapid {
             width: 800px;
             height: 500px;
         }
@@ -34,7 +34,7 @@
 
 
     <script>
-        var map = L.map('mapid').setView([42.0, -93.634], 13);
+        var map = L.map('mapid').setView([18, -64.7], 13);
 
         L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
             attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
