--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -45,7 +45,7 @@
         }).addTo(map);
 
         L.marker([18.333333, -64.733333]).addTo(map)
-            .bindPopup("My favorite island")
+            .bindPopup("Saint John: My favorite island")
             .openPopup();
    
   //----------Adding multiple markers for places----------
