--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -76,14 +76,13 @@
         var places = [
             [18.35, -64.716667, "Coral Bay, Saint John"],
             [18.331343, -64.7937497, "Cruz Bay, Saint John"],
-            [18.346667, -64.761389, "Catherineberg Ruins"],
-            [18.364444, -64.728889, "Annaberg Sugar Plantation"]
+            [18.346667, -64.761389, "Catherineberg Ruins"]
         ];
 
         //loop through the array and add a marker for each
         for (var i = 0; i < places.length; i++) {
-            marker = new L.marker([places[i][0], places[i][1], places[i][2]])
-                .bindPopup(places[i][3])
+            marker = new L.marker([places[i][0], places[i][1]])
+                .bindPopup(places[i][2])
                 .addTo(map);
         }
 
