--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise5/">Exercise 5</a>
       <a href="https://ebravard.github.io/CRP558/exercise6/">Exercise 6</a>
       <a href="https://ebravard.github.io/CRP558/exercise7/">Exercise 7</a> 
+      <a href="https://ebravard.github.io/CRP558/exercise8/">Exercise 8</a> 
     </div>
   </div>
 </div>
