--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise6/">Exercise 6</a>
       <a href="https://ebravard.github.io/CRP558/exercise7/">Exercise 7</a> 
       <a href="https://ebravard.github.io/CRP558/exercise8/">Exercise 8</a> 
+      <a href="https://ebravard.github.io/CRP558/exercise9/">Exercise 9</a>
     </div>
   </div>
 </div>
