--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise7/">Exercise 7</a> 
       <a href="https://ebravard.github.io/CRP558/exercise8/">Exercise 8</a> 
       <a href="https://ebravard.github.io/CRP558/exercise9/">Exercise 9</a>
+      <a href="https://ebravard.github.io/CRP558/exercise10/">Exercise 10</a>
     </div>
   </div>
 </div>
