--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise8/">Exercise 8</a> 
       <a href="https://ebravard.github.io/CRP558/exercise9/">Exercise 9</a>
       <a href="https://ebravard.github.io/CRP558/exercise10/">Exercise 10</a>
+      <a href="https://ebravard.github.io/CRP558/assignment2/">Assignment 2</a>
     </div>
   </div>
 </div>
