--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="https://ebravard.github.io/CRP558/exercise9/">Exercise 9</a>
       <a href="https://ebravard.github.io/CRP558/exercise10/">Exercise 10</a>
       <a href="https://ebravard.github.io/CRP558/assignment2/">Assignment 2</a>
+      <a href="https://ebravard.github.io/CRP558/TechnologyReport/">Technology Report</a>
     </div>
   </div>
 </div>
