--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <a href="https://ebravard.github.io/CRP558/exercise10/">Exercise 10</a>
       <a href="https://ebravard.github.io/CRP558/assignment2/">Assignment 2</a>
       <a href="https://ebravard.github.io/CRP558/TechnologyReport/">Technology Report</a>
+      <a href="https://ebravard.github.io/CRP558/exercise11/">Exercise 11</a>
+      <a href="https://ebravard.github.io/CRP558/exercise12/">Exercise 12</a>
     </div>
   </div>
 </div>
