--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -75,7 +75,7 @@
     <!-- image -->
     <img src= "acpf.JPG" height="50" width="150" alt="USDA ACPF logo">
     <p>Source used to acquire the data for this map was the <a href="https://benson.gis.iastate.edu/ACPF/dwnldACPF.html">ACPF Watershed Database</a>.<br>
-    Information regarding BMPs can be found on Iowa State's website about the <a href="https://www.nrem.iastate.edu/bmpcosttools/"> Nutrient Reduction Strategy Decision Support Tool</a>.<br>For more information about the making of this project, feel free to view my Final Project Report.</p>
+    Information regarding BMPs can be found on Iowa State's website about the <a href="https://www.nrem.iastate.edu/bmpcosttools/"> Nutrient Reduction Strategy Decision Support Tool</a>.<br>For more information about the making of this project, feel free to view my <a href="https://ebravard.github.io/CRP558/FinalProjectReport">Final Project Report</a>.</p>
     
 
     <script>
