--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="https://ebravard.github.io/CRP558/TechnologyReport/">Technology Report</a>
       <a href="https://ebravard.github.io/CRP558/exercise11/">Exercise 11</a>
       <a href="https://ebravard.github.io/CRP558/exercise12/">Exercise 12</a>
+      <a href="https://ebravard.github.io/CRP558/FinalProject/">Final Project</a>
     </div>
   </div>
 </div>
