--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -68,8 +68,7 @@
         <b>Nutrient Removal Wetlands</b> are are designed to treat nitrate, phosphorus, and sediment. Wetlands slow the movement of water through a watershed, thus allowing sediment from runoff to settle and for denitrification of nitrate-nitrogen to occur.  Buffers of perennial vegetation are planted around wetlands to remove phosphorus and provide wildlife habitat.  Constructed wetlands are scaled according to the treatment drainage area (a range of 0.5-2% in wetland to watershed area ratio is standard). Nutrient removal wetlands have the potential to remove 40-90% of the nitrate in tile drainage, depending on the nitrate load intercepted by the wetland and the area of the wetland. 
         Make sure that the <em>Nutrient Removal Wetlands</em> layer is turned on and then click <button id = "nrwBtn">here</button> to view a nutrient removal wetland on the map. <br><br>
         
-        <b>Saturated Buffers</b> are riparian buffers in which water from subsurface tile drainage is diverted through an installed water control structure  parallel to an existing riparian buffer.  The goal is to reduce nutrient and sediment loading from tile drainage and runoff. 
-        Make sure that the <em>Saturated Buffers</em> layer is turned on and then click <button id = "satbuffBtn">here</button> to view a saturated buffer on the map. <br>
+        <b>Saturated Buffers</b> are riparian buffers in which water from subsurface tile drainage is diverted through an installed water control structure  parallel to an existing riparian buffer.  The goal is to reduce nutrient and sediment loading from tile drainage and runoff. Saturated buffers have around a 50% nitrate-N reduction efficiency. Make sure that the <em>Saturated Buffers</em> layer is turned on and then click <button id = "satbuffBtn">here</button> to view a saturated buffer on the map. <br>
         
     <br>
     <!-- image -->
